--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+#spring projekto konfiguracinis failas
 
+logging.level.root=debug
+#kad logintu
+
+
+
+
+# kelias i DB
+spring.datasource.url=jdbc:h2:mem:blog_ca_2023_db
+# default user
+spring.datasource.username=aleksandr
+# default password
+spring.datasource.password=Test1
+
+
+
+# jeigu kas nors netinka duombazeje - tegu Hibernate pataiso automatiskai. Jei viskas OK - tegu neliecia
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.show-sql = true
+
+
+# ijungti H2 WEB konsole
+spring.h2.console.enabled=true
+# H2 web konsoles adresas (URL)
+spring.h2.console.path=/h2
