--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,9 @@ spring.datasource.username=aleksandr
 # default password
 spring.datasource.password=Test1
 
-
+# schemos iniciavimo scripto vieta
+spring.sql.init.schema-locations=classpath:db/schema.sql
+spring.sql.init.data-locations=classpath:db/data.sql
 
 # jeigu kas nors netinka duombazeje - tegu Hibernate pataiso automatiskai. Jei viskas OK - tegu neliecia
 spring.jpa.hibernate.ddl-auto=update
